--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
         <title>RPS Game</title>
         <meta charset="utf-8">
     </head>
 
     <body>
         <h1><strong>Hello! Open the console in DevTools and type game() to start the game.</strong></h1>
-
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+        <script src="script.js"></script>
     </body>
 
 
